--- a/wp-content/themes/giger-kms/src/sass/_header.scss
+++ b/wp-content/themes/giger-kms/src/sass/_header.scss
@@ -2,7 +2,7 @@
 .site-header {
 	background:$color-secondary-black;
 	color: $color-white;
-	padding: 15px 0;
+	padding: 10px 0 15px;
 }
 
 .site-panel-row {
